--- a/src/custom-theme.css
+++ b/src/custom-theme.css
@@ -1,3 +1,21 @@
 :root{
-    --primary-500: #FF0266;
+    --white-800: hsl(0, 0%, 17%);
+    --white-500: hsl(0, 0%, 50%);
+    --white-300: hsl(0, 0%, 70%);
+    --white-200: hsl(0, 0%, 83%);
+    --white-100: hsl(0, 0%, 90%);
+    --white: hsl(0, 0%, 100%);
+
+    --primary-700: hsl(228, 100%, 31%);
+    --primary-600: hsl(228, 100%, 41%);    
+    --primary-500: hsl(228, 100%, 51%);
+    --primary-400: hsl(228, 100%, 61%);    
+    --primary-300: hsl(228, 100%, 71%);
+
+    --accent-500: hsl(336, 100%, 50%);
+    
+}
+
+body{
+    background-color: var(--white);
 }
