--- a/src/custom-theme.css
+++ b/src/custom-theme.css
@@ -15,6 +15,9 @@
     --primary-100: hsl(228, 100%, 91%);
 
     --accent-500: hsl(336, 100%, 50%);
+    --accent-600: hsl(336, 100%, 60%);
+    --accent-700: hsl(336, 100%, 70%);
+    --accent-800: hsl(336, 100%, 80%);
     
 }
 
